--- a/postgresql/.env
+++ b/postgresql/.env
@@ -17,11 +17,10 @@ CONF_DIR=./conf
 POSTGRES_VERSION=15
 POSTGRES_CONTAINER_NAME=postgres${POSTGRES_VERSION}
 POSTGRES_HOST_PORT=50032
-POSTGRES_USER=shizenghua
 POSTGRES_PASSWORD=shizenghua
 POSTGRES_DATA=${DATA_DIR}/postgresql
 
-PGADMIN4_VERSION=7.6
+PGADMIN4_VERSION=latest
 PGADMIN4_DATA=${DATA_DIR}/pgadmin4
 PGADMIN4_DEFAULT_EMAIL=shizenghua@163.com
 PGADMIN4_DEFAULT_PASSWORD=shizenghua
