--- a/php/.env
+++ b/php/.env
@@ -45,6 +45,6 @@ PHP74_VERSION=7.4.33
 PHP74_PHP_CONF_FILE=./build/php74/php.ini
 PHP74_FPM_CONF_FILE=./build/php74/php-fpm.conf
 PHP74_LOG_DIR=${LOG_DIR}/php74
-PHP74_EXTENSIONS=mysqli pdo_mysql memcached redis mcrypt sockets swoole mbstring curl pcntl
+PHP74_EXTENSIONS=mysqli pdo_mysql memcached redis mcrypt sockets swoole mbstring curl pcntl gd seaslog
 PHP74_SSH_DIR=${DATA_DIR}/ssh
 PHP74_COMPOSER_DIR=${DATA_DIR}/composer74
