--- a/.env.sample
+++ b/.env.sample
@@ -46,10 +46,10 @@ PGADMIN4_HOST_PORT=50033
 
 
 # Node14版本
-NODE_VERSION=14.21.3-alpine3.17
+NODE_VERSION=18.18-alpine3.18
 NODE_HOST_PORT=50300
 NODE_HOST_PORT_I=3000
-NODE_CONTAINER_NAME=node14
+NODE_CONTAINER_NAME=node18
  
 
 # NGINX配置
@@ -150,7 +150,7 @@ PHP74_VERSION=7.4.33-fpm-alpine3.16
 PHP74_PHP_CONF_FILE=./build/php74/php.ini
 PHP74_FPM_CONF_FILE=./build/php74/php-fpm.conf
 PHP74_LOG_DIR=${LOG_DIR}/php74
-PHP74_EXTENSIONS=mysqli pdo_mysql memcached redis mcrypt sockets swoole mbstring curl pcntl gd seaslog
+PHP74_EXTENSIONS=mysqli pdo_mysql memcached redis mcrypt sockets swoole mbstring curl pcntl gd seaslog https://github.com/php/pecl-database-mysql/archive/refs/heads/master.zip
 PHP74_COMPOSER_DIR=${DATA_DIR}/composer/74
 PHP74_PORT=9740
 PHP74_PORT_I=9000
